--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>Desenhos animados</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=up2qcFxd-Ks">
                 <img src="https://img.youtube.com/vi/up2qcFxd-Ks/maxresdefault.jpg" />
